# TextBoxGAN

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  allow_memory_growth.py  config.py  infer.py  infere.py  pyproject.toml  requirements.txt  train.py  training_step.py  training_steps.py  validation_step.py
.github/workflows/: ci.yml
aster_ocr_utils/: aster_inferer.py  aster_tester.py  weigths_tf1_to_tf2.py
config/: __init__.py  char_tokens.py  config.py
dataset-utils/: data_loader.py  text_box dataset_maker.py
dataset_utils/: data_loader.py  dataset_metrics.py  filter_out_bad_images.py  text_box dataset_maker.py  text_box_dataset_maker.py  text_box_dataset_metrics.py  text_corpus_dataset_maker.py  training_data_loader.py  validation_data_loader.py
losses/: gan_losses.py  losses.py  ocr_loss.py  stylegan2_losses.py
models/: model_loader.py  word_encoder.py
models/custom_stylegan2/: discriminator.py  generator.py  latent_encoder.py  utils.py
models/custom_stylegan2/layers/: bias_act.py  conv.py  dense.py  from_rgb.py  mapping_block.py  mini_batch_std.py  modulated_conv2d.py  noise.py  synthesis_block.py  to_rgb.py
models/custom_stylegan2/layers/upfirdn/: upfirdn_2d_v2.py
models/losses/: gan_losses.py  ocr_loss.py  ocr_losses.py
models/stylegan2/: discriminator.py  generator.py  latent_encoder.py  utils.py
models/stylegan2/layers/: bias_act.py  commons.py  conv.py  dense.py  from_rgb.py  mapping_block.py  mini_batch_std.py  modulated_conv2d.py  synthesis_block.py  to_rgb.py
models/stylegan2/layers/cuda/: custom_ops.py  fused_bias_act.py  upfirdn_2d.py  upfirdn_2d_v2.py
models/stylegan2/layers/upfirdn/: custom_ops.py  upfirdn_2d_v2.py
projector/: lpips_tensorflow.py  projector.py
tests/: test_unit.py
utils/: __init__.py  characters.py  config.py  load_models.py  log_summary.py  loss_tracker.py  model_loader.py  tensorboard_writer.py  tf_utils.py  utils.py
