[tool.poetry]
name = "textboxgan"
version = "1.0.0"
description = ""
authors = ["Noe Achache <noe.achache@gmail.com>", "Antoine Eudes <antoine.eudes@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.12"
numpy = "1.20.*"
tensorflow_addons = "0.16.1"
tqdm = "4.30.0"
tensorflow = "2.8.0"
easydict = "1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
